--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -33,24 +33,23 @@
     "                       'median_buffer_range_percentage_10_r', 'percent_amplitude_r', 'mean_variance_r', \n",
     "                       'anderson_darling_normal_r', 'chi2_r', 'skew_r', 'stetson_K_r']\n",
     "\n",
-    "WORK_FEATURES_NAMES = ['ra', 'dec', 'distnr', 'magnr', 'mean_g', 'weighted_mean_g',\n",
+    "WORK_FEATURES_NAMES = [  'distnr', 'mean_g', 'weighted_mean_g',\n",
     "                       'standard_deviation_g', 'median_g', 'amplitude_g', 'beyond_1_std_g', 'cusum_g', \n",
     "                       'inter_percentile_range_10_g', 'kurtosis_g', 'linear_trend_g', 'linear_trend_sigma_g',\n",
     "                       'linear_trend_noise_g', 'linear_fit_slope_g', 'linear_fit_slope_sigma_g',\n",
     "                       'linear_fit_reduced_chi2_g', 'magnitude_percentage_ratio_40_5_g', 'magnitude_percentage_ratio_20_10_g', \n",
     "                       'maximum_slope_g', 'median_absolute_deviation_g', 'median_buffer_range_percentage_10_g', 'percent_amplitude_g', \n",
-    "                       'mean_variance_g', 'anderson_darling_normal_g', 'chi2_g', 'skew_g', 'stetson_K_g', 'mean_r', 'weighted_mean_r', \n",
+    "                       'anderson_darling_normal_g', 'chi2_g', 'skew_g', 'stetson_K_g', 'mean_r', 'weighted_mean_r', \n",
     "                       'standard_deviation_r', 'median_r', 'amplitude_r', 'beyond_1_std_r', 'cusum_r', 'inter_percentile_range_10_r', \n",
     "                       'kurtosis_r', 'linear_trend_r', 'linear_trend_sigma_r', 'linear_trend_noise_r', 'linear_fit_slope_r', \n",
     "                       'linear_fit_slope_sigma_r', 'linear_fit_reduced_chi2_r', 'magnitude_percentage_ratio_40_5_r',\n",
     "                       'magnitude_percentage_ratio_20_10_r', 'maximum_slope_r', 'median_absolute_deviation_r', \n",
-    "                       'median_buffer_range_percentage_10_r', 'percent_amplitude_r', 'mean_variance_r', \n",
+    "                       'median_buffer_range_percentage_10_r', 'percent_amplitude_r'_va, \n",
     "                       'anderson_darling_normal_r', 'chi2_r', 'skew_r', 'stetson_K_r']\n",
     "\n",
     "\n",
     "WORK_FEATURES_NAMES_G =  [\n",
-    "    'ra', 'dec', 'distnr', 'magnr',\n",
-    "    \n",
+    "  'distnr',  \n",
     "    'nalerthist_g',\n",
     " 'mean_g',\n",
     " 'weighted_mean_g',\n",
@@ -73,7 +72,6 @@
     " 'median_absolute_deviation_g',\n",
     " 'median_buffer_range_percentage_10_g',\n",
     " 'percent_amplitude_g',\n",
-    " 'mean_variance_g',\n",
     " 'anderson_darling_normal_g',\n",
     " 'chi2_g',\n",
     " 'skew_g',\n",
@@ -81,7 +79,7 @@
     "\n",
     "\n",
     "WORK_FEATURES_NAMES_R = [\n",
-    "'ra', 'dec', 'distnr', 'magnr',\n",
+    'distnr',
     "'mean_r',\n",
     " 'weighted_mean_r',\n",
     " 'standard_deviation_r',\n",
@@ -103,7 +101,6 @@
     " 'median_absolute_deviation_r',\n",
     " 'median_buffer_range_percentage_10_r',\n",
     " 'percent_amplitude_r',\n",
-    " 'mean_variance_r',\n",
     " 'anderson_darling_normal_r',\n",
     " 'chi2_r',\n",
     " 'skew_r',\n",
