--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -48,7 +48,7 @@
     "                       'anderson_darling_normal_r', 'chi2_r', 'skew_r', 'stetson_K_r']\n",
     "\n",
     "\n",
-    "WORK_FEATURES_NAMES_G =  [\n",
+    "WORK_FEATURES_NAMES_G =  [
     "  'distnr',  \n",
     "    'nalerthist_g',\n",
     " 'mean_g',\n",
